// Copyright 2021 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package filter_fuzzer;

message Empty {}

message ChannelArg {
    string key = 1;
    oneof value {
        string str = 2;
        int64 i = 3;
        uint32 resource_quota = 4;
    }
}

message Metadatum {
    string key = 1;
    bytes value = 2;
}

message Metadata {
    repeated Metadatum result = 1;
}

message Action {
    oneof type {
        Empty cancel = 1;
        Metadata receive_initial_metadata = 2;
        Metadata receive_trailing_metadata = 3;
    }
}

message Msg {
    string filter = 1;
    repeated ChannelArg channel_args = 2;
    repeated Metadatum initial_metadata = 3;
    repeated Action actions = 100;
}
